# haskell-web-apps

./: CHANGELOG.md  README.md  cabal.project  haskell-web-apps.cabal
app/: Main.hs
src/: WebApp.hs
