cabal-version:      2.4
name:               haskell-web-apps
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  WebApp
    build-depends:    base ^>=4.14.1.0,
                      servant ^>=0.18.2,
                      servant-server ^>=0.18.2,
                      mtl ^>=2.2,
                      aeson ^>=1.5.6.0,
                      warp ^>=3.3.15
    hs-source-dirs:   src
    default-language: Haskell2010
