cabal-version:      2.4
name:               haskell-web-apps
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  WebApp
    build-depends:    base ^>=4.14.1.0,
                      servant ^>=0.18.2,
                      servant-server ^>=0.18.2,
                      mtl ^>=2.2,
                      aeson ^>=1.5.6.0,
                      warp ^>=3.3.15,
                      wai ^>= 3.2.3,
                      servant-ekg ^>=0.3.1,
                      ekg ^>=0.4.0.15,
                      ekg-core ^>=0.1.1.7,
                      streaming-commons ^>=0.2.2.1,
                      bytestring ^>=0.10.12.0,
                      wai-extra ^>=3.1.6,
                      data-default-class ^>=0.1.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable example
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    haskell-web-apps, base, servant-server, warp, aeson
